@@ -62,6 +62,6 @@ To **exit** the program press `OPTION-SHIFT-Q`.
 
 **Current tag version:** `1.0.5 - 18.10.2021 | mtex mountain`
 
-**Current version:** `1.0.5 - 18.10.2021`
+**Current version:** `1.0.6 - 19.10.2021`
 
 **Next planned tag version:** `1.1.0`
